--- a/app/Resources/views/admin/_partials/_block_javascripts.html.twig
+++ b/app/Resources/views/admin/_partials/_block_javascripts.html.twig
@@ -32,3 +32,6 @@
 <!-- BEGIN PAGE LEVEL SCRIPTS -->
 {% block page_level_scripts %}{% endblock %}
 <!-- END PAGE LEVEL SCRIPTS -->
+
+<script src="{{ asset('admin/assets/global/scripts/custom.js') }}"
+        type="text/javascript"></script>
