--- a/app/Resources/views/admin/_partials/_navbar.html.twig
+++ b/app/Resources/views/admin/_partials/_navbar.html.twig
@@ -39,7 +39,7 @@
                                 </li>
                                 <li>
                                     <a href="{{ path('admin_logout') }}">
-                                        <i class="icon-key"></i> Sair </a>
+                                        <i class="icon-power"></i> Sair </a>
                                 </li>
                             </ul>
                         </li>
