--- a/app/Resources/views/admin/_partials/_sidebar.html.twig
+++ b/app/Resources/views/admin/_partials/_sidebar.html.twig
@@ -52,8 +52,32 @@
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">
-                    <i class="icon-user"></i>
+                    <i class="icon-globe"></i>
                     <span class="title">Clientes</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">
+                    <i class="icon-wallet"></i>
+                    <span class="title">Cobranças</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">
+                    <i class="icon-book-open"></i>
+                    <span class="title">Boletos</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">
+                    <i class="icon-docs"></i>
+                    <span class="title">Remessa</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">
+                    <i class="icon-layers"></i>
+                    <span class="title">Páginas</span>
                 </a>
             </li>
         </ul>
