--- a/app/Resources/views/admin/user/edit.html.twig
+++ b/app/Resources/views/admin/user/edit.html.twig
@@ -29,7 +29,15 @@
                     </div>
                     <div class="col-md-6">{{ form_row(form.lastName) }}</div>
                     <div class="col-md-6">{{ form_row(form.email) }}</div>
-                    <div class="col-md-6">{{ form_row(form.isEnabled) }}</div>
+                    <div class="col-md-6">
+                        <label class="control-label">&nbsp</label>
+                        {{ form_row(form.isEnabled, {'attr': {
+                            'data-on-color': 'success',
+                            'data-off-color': 'danger',
+                            'data-on-text': 'resource.is_enabled'|trans,
+                            'data-off-text': 'resource.is_not_enabled'|trans
+                        }}) }}
+                    </div>
                 </div>
             </div>
         {% endblock %}
