--- a/app/Resources/views/admin/user/new.html.twig
+++ b/app/Resources/views/admin/user/new.html.twig
@@ -31,11 +31,28 @@
                     <div class="col-md-6">{{ form_row(form.email) }}</div>
                     <div class="col-md-6">{{ form_row(form.plainPassword.first) }}</div>
                     <div class="col-md-6">{{ form_row(form.plainPassword.second) }}</div>
-                    <div class="col-md-6">{{ form_row(form.isEnabled) }}</div>
+                    <div class="col-md-6">
+                        <label class="control-label">&nbsp</label>
+                        {{ form_row(form.isEnabled, {'attr': {
+                            'data-on-color': 'success',
+                            'data-off-color': 'danger',
+                            'data-on-text': 'resource.is_enabled'|trans,
+                            'data-off-text': 'resource.is_not_enabled'|trans
+                        }}) }}
+                    </div>
                 </div>
             </div>
         {% endblock %}
 
     {% endembed %}
 
+{% endblock %}
+
+{% block javascripts %}
+    {% embed 'admin/_partials/_block_javascripts.html.twig' %}
+        {% block page_level_scripts %}
+            <script src="{{ asset('admin/assets/pages/scripts/components-bootstrap-switch.min.js') }}"
+                    type="text/javascript"></script>
+        {% endblock %}
+    {% endembed %}
 {% endblock %}
