--- a/app/Resources/views/admin/_partials/_sidebar.html.twig
+++ b/app/Resources/views/admin/_partials/_sidebar.html.twig
@@ -44,7 +44,7 @@
                     <li class="nav-item
                         {% if 'admin_user_new' in app.request.attributes.get('_route') %}active{% endif %}">
                         <a href="{{ path('admin_user_new') }}" class="nav-link ">
-                            <i class="icon-user"></i>
+                            <i class="icon-user-follow"></i>
                             <span class="title">Novo Usuário</span>
                         </a>
                     </li>
