--- a/app/Resources/views/admin/_partials/_default_table_list.html.twig
+++ b/app/Resources/views/admin/_partials/_default_table_list.html.twig
@@ -18,19 +18,21 @@
                 </div>
             </div>
 
-            <form class="form-inline" method="get" action="#">
+            <form class="form-inline" method="get" action="">
 
                 <div class="portlet-body">
+
                     {% block filters %}{% endblock %}
 
                     <div class="clearfix"></div>
 
-                    <br>
+                    {#<br>#}
+                    <hr>
 
                     {{ include('_partials/_flash_messages.html.twig') }}
 
-                    <div class="table-responsive">
-                        <table class="table table-striped table-bordered table-hover">
+                    <div class="_table-responsive">
+                        <table class="table table-striped _table-bordered table-hover">
                             <thead>
                             {% block table_tr_th %}{% endblock %}
                             </thead>
@@ -40,6 +42,8 @@
                         </table>
 
                     </div>
+
+                    <hr>
 
                     <div class="row">
                         <div class="col-md-5 col-sm-5 col-xs-12">
@@ -53,6 +57,32 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="modalConfirmation" tabindex="-1" role="basic"
+                         aria-labelledby="modalConfirmationLabel">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                                aria-hidden="true">&times;</span></button>
+                                    <h4 class="modal-title" id="modalConfirmationLabel">Confirmação</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <h4>Deseja confirmar a exclusão?</h4>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn red btn-outline" data-dismiss="modal">
+                                        <i class="fa fa-remove"></i> Cancelar
+                                    </button>
+                                    <button type="button" class="btn green btn-outline delete-resource-form">
+                                        <i class="fa fa-check"></i> Confirmar Exclusão
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End Modal -->
 
                 </div>
 
