--- a/app/Resources/views/admin/changePassword/changePassword.html.twig
+++ b/app/Resources/views/admin/changePassword/changePassword.html.twig
@@ -1,35 +1,51 @@
 {% extends 'admin/base.html.twig' %}
 
-{% block body %}
+{% block page_content %}
 
-    <div class="panel panel-default">
+    {% embed 'admin/_partials/_default_resource.html.twig' with {'route_index' : 'admin_user_index'} %}
 
-    <div class="panel-heading">
-        <h2><i class="glyphicon glyphicon-list-alt"></i> {{ 'user.change_password.title'|trans }}</h2>
-    </div>
+        {% block form_start %}
+            {{ form_start(form, {'action': path('admin_change_password'),
+                'attr' : {'class' : '_form-horizontal', 'novalidate': true}}) }}
+        {% endblock %}
 
-    <div class="panel-body">
+        {% block icon_list %}
+            <i class="icon-key font-green-sharp bold"></i>
+        {% endblock %}
 
-        {{ include('_partials/_alerts.html.twig') }}
+        {% block caption_subject %}
+            <span class="caption-subject font-green-sharp bold uppercase">
+                {{ 'user.change_password.title'|trans }}
+            </span>
+        {% endblock %}
 
-        {{ form_start(form, { 'action': path('admin_change_password'), 'attr': {'novalidate': 'novalidate'} }) }}
+        {% block actions %}
+            <button type="submit" class="btn green">
+                <span class="fa fa-check"></span> Salvar
+            </button>
+            <a href="{{ path('admin_user_index') }}" class="btn red _btn-outline">
+                <span class="fa fa-remove"></span> Cancelar
+            </a>
+        {% endblock %}
 
-        {{ form_errors(form) }}
+        {% block nav_tabs %}
+            <li role="presentation" class="active">
+                <a href="#geral" aria-controls="geral" role="tab" data-toggle="tab">Geral</a>
+            </li>
+        {% endblock %}
 
-        {{ form_row(form.current_password) }}
-        {{ form_row(form.plainPassword.first) }}
-        {{ form_row(form.plainPassword.second) }}
-
-        <div class="row">
-            <div class="col-md-12">
-                <button class="btn btn-primary">{{ 'user.change_password.btns.submit'|trans }}</button>
+        {% block tab_pane %}
+            <div role="tabpanel" class="tab-pane active" id="geral">
+                <div class="row">
+                    <div class="col-md-6">
+                        {{ form_row(form.current_password, {'attr': {'autofocus': true}}) }}
+                    </div>
+                    <div class="col-md-6">{{ form_row(form.plainPassword.first) }}</div>
+                    <div class="col-md-6">{{ form_row(form.plainPassword.second) }}</div>
+                </div>
             </div>
-        </div>
+        {% endblock %}
 
-        {{ form_widget(form._token) }}
-
-        {{ form_end(form, {'render_rest': false}) }}
-
-    </div>
+    {% endembed %}
 
 {% endblock %}
