--- a/app/Resources/views/site/account/dashboard.html.twig
+++ b/app/Resources/views/site/account/dashboard.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    {% include '_partials/_alerts.html.twig' %}
+    {% include '_partials/_flash_messages.html.twig' %}
 
     <h3>Site Account Dashboard</h3>
 {% endblock %}
