--- a/app/Resources/views/site/account/resetting/resettingRequest.html.twig
+++ b/app/Resources/views/site/account/resetting/resettingRequest.html.twig
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col-lg-12">
 
-            {{ include('_partials/_alerts.html.twig') }}
+            {{ include('_partials/_flash_messages.html.twig') }}
 
             {{ form_errors(form) }}
 
