--- a/app/Resources/views/admin/_partials/_actions_btn_group.html.twig
+++ b/app/Resources/views/admin/_partials/_actions_btn_group.html.twig
@@ -1,5 +1,5 @@
 <div class="actions">
-    <div class="btn-group dropdown-dark">
+    <div class="btn-group dropdown-custom">
         {% block buttons %}{% endblock %}
         <ul class="dropdown-menu pull-right" role="menu">
             {% block li_actions %}{% endblock %}
