--- a/app/Resources/views/admin/user/edit.html.twig
+++ b/app/Resources/views/admin/user/edit.html.twig
@@ -9,6 +9,10 @@
                 'attr' : {'class' : '_form-horizontal'}}) }}
         {% endblock %}
 
+        {% block icon_list %}
+            <i class="icon-user font-green-sharp"></i>
+        {% endblock %}
+
         {% block caption_subject %}
             <span class="caption-subject font-green-sharp bold uppercase">
                 Editar Usuário
@@ -30,7 +34,6 @@
                     <div class="col-md-6">{{ form_row(form.lastName) }}</div>
                     <div class="col-md-6">{{ form_row(form.email) }}</div>
                     <div class="col-md-6">
-                        <label class="control-label">&nbsp</label>
                         {{ form_row(form.isEnabled, {'attr': {
                             'data-on-color': 'success',
                             'data-off-color': 'danger',
@@ -38,6 +41,16 @@
                             'data-off-text': 'resource.is_not_enabled'|trans
                         }}) }}
                     </div>
+                    {% if is_granted(constant('SUPER_ADMIN_ROLE', adminUser)) %}
+                        <div class="col-md-6">
+                            {{ form_widget(form.isSuperAdmin, {'attr': {
+                                'data-on-color': 'success',
+                                'data-off-color': 'danger',
+                                'data-on-text': 'resource.is_enabled'|trans,
+                                'data-off-text': 'resource.is_not_enabled'|trans
+                            }}) }}
+                        </div>
+                    {% endif %}
                 </div>
             </div>
         {% endblock %}
