--- a/app/Resources/views/site/account/changePassword/changePassword.html.twig
+++ b/app/Resources/views/site/account/changePassword/changePassword.html.twig
@@ -10,7 +10,7 @@
 
     <div class="panel-body">
 
-        {{ include('_partials/_alerts.html.twig') }}
+        {{ include('_partials/_flash_messages.html.twig') }}
 
         {{ form_start(form, { 'action': path('site_change_password'), 'attr': {'novalidate': 'novalidate'} }) }}
 
