--- a/app/Resources/views/site/login.html.twig
+++ b/app/Resources/views/site/login.html.twig
@@ -11,7 +11,7 @@
     <div class="row">
         <div class="col-lg-12">
 
-            {{ include('_partials/_alerts.html.twig') }}
+            {{ include('_partials/_flash_messages.html.twig') }}
 
             {{ form_row(form._username, {'attr':{'value': last_username }}) }}
             {{ form_row(form._password) }}
