--- a/app/Resources/views/admin/customer/index.html.twig
+++ b/app/Resources/views/admin/customer/index.html.twig
@@ -5,16 +5,16 @@
     {% embed 'admin/_partials/_default_table_list.html.twig' %}
 
         {% block icon_list %}
-            <i class="icon-user font-green-sharp bold"></i>
+            <i class="icon-globe font-green-sharp bold"></i>
         {% endblock %}
 
         {% block caption_subject %}
-            Usuários ({{ adminUsers.nbResults }} registros)
+            {{ 'admin.customers.title'|trans }} ({{ customers.nbResults }} registros)
         {% endblock %}
 
         {% block actions %}
-            <a href="{{ path('admin_user_new') ~ pagination.buildQuery }}" class="btn green">
-                <i class="fa fa-plus"></i> Novo Usuário
+            <a href="{{ path('admin_customer_new') ~ pagination.buildQuery }}" class="btn green">
+                <i class="fa fa-plus"></i> {{ 'admin.customers.new'|trans }}
             </a>
         {% endblock %}
 
@@ -29,7 +29,7 @@
                 </button>
             </div>
             <div class="form-group">
-                <a href="{{ path('admin_user_index') }}"
+                <a href="{{ path('admin_customer_index') }}"
                    class="btn btn-default form-control">
                     <i class="fa fa-times"></i> Limpar
                 </a>
@@ -40,7 +40,7 @@
             <tr>
                 <th>ID</th>
                 <th>
-                    <a href="{{ path('admin_user_index') ~ pagination.buildQuery('sorting')  ~ pagination.sortingFieldQuery('firstName') ~ pagination.sortingFieldQuery('lastName') }}">
+                    <a href="{{ path('admin_customer_index') ~ pagination.buildQuery('sorting')  ~ pagination.sortingFieldQuery('name') }}">
                         Nome
                     </a>
                 </th>
@@ -48,7 +48,7 @@
                 <th>Ativo</th>
                 <th>Último Login</th>
                 <th>
-                    <a href="{{ path('admin_user_index') ~ pagination.buildQuery('sorting') ~ pagination.sortingFieldQuery('createdAt') }}">
+                    <a href="{{ path('admin_customer_index') ~ pagination.buildQuery('sorting') ~ pagination.sortingFieldQuery('createdAt') }}">
                         Criado em
                     </a>
                 </th>
@@ -57,13 +57,13 @@
         {% endblock %}
 
         {% block table_tr_td %}
-            {% for user in adminUsers %}
+            {% for customer in customers %}
                 <tr>
-                    <td>{{ user.id }}</td>
-                    <td>{{ user.fullName }}</td>
-                    <td>{{ user.email }}</td>
+                    <td>{{ customer.id }}</td>
+                    <td>{{ customer.name }}</td>
+                    <td>{{ customer.email }}</td>
                     <td>
-                        {% if user.isEnabled == '1' %}
+                        {% if customer.siteUser.isEnabled == '1' %}
                             <span class="label label-sm label-success">
                                 <i class="fa fa-check"></i>
                             </span>
@@ -73,16 +73,16 @@
                             </span>
                         {% endif %}
                     </td>
-                    <td>{% if user.lastLoginAt is not null %}
-                            {{ user.lastLoginAt|date('d/m/Y H:i') }}
+                    <td>{% if customer.siteUser.lastLoginAt is not null %}
+                        {{ customer.siteUser.lastLoginAt|date('d/m/Y H:i') }}
                         {% else %}
                             -
                         {% endif %}</td>
-                    <td>{{ user.createdAt|date('d/m/Y H:i') }}</td>
+                    <td>{{ customer.siteUser.createdAt|date('d/m/Y H:i') }}</td>
                     <td>
                         {% embed 'admin/_partials/_actions_btn_group.html.twig' %}
                             {% block buttons %}
-                                <a href="{{ path('admin_user_edit', { id: user.id }) ~ pagination.buildQuery }}"
+                                <a href="{{ path('admin_customer_edit', { id: customer.id }) ~ pagination.buildQuery }}"
                                    title="Editar" class="btn btn-default btn-sm">
                                     <span class="glyphicon glyphicon-pencil"></span> Editar
                                 </a>
@@ -93,22 +93,25 @@
                             {% endblock %}
                             {% block li_actions %}
                                 <li>
+                                    <a href="#">
+                                        <i class="fa fa-user"></i>
+                                        Alterar Senha
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{{ path('admin_impersonate_user', {username: customer.email}) }}">
+                                        <i class="fa fa-external-link"></i> Logar como Cliente
+                                    </a>
+                                </li>
+                                <li>
                                     <a href="javascript:;" data-toggle="modal"
                                        data-target="#modalConfirmation"
-                                       data-path="{{ path('admin_user_delete', {id: user.id})|escape }}"
-                                       data-crf="{{ form_widget(delete_forms[user.id]._token)|escape }}"
+                                       data-path="{{ path('admin_customer_delete', {id: customer.id})|escape }}"
+                                       data-crf="{{ form_widget(delete_forms[customer.id]._token)|escape }}"
                                     >
                                         <i class="fa fa-trash"></i> Deletar
                                     </a>
                                 </li>
-                                {#<li>
-                                    <a href="javascript:;" class="delete-resource-form"
-                                       data-path="{{ path('admin_user_delete', {id: user.id})|escape }}"
-                                       data-crf="{{ form_widget(delete_forms[user.id]._token)|escape }}"
-                                    >
-                                        <i class="icon-trash"></i> Deletar
-                                    </a>
-                                </li>#}
                             {% endblock %}
                         {% endembed %}
                     </td>
@@ -117,14 +120,14 @@
         {% endblock %}
 
         {% block list_info %}
-            Exibindo {{ adminUsers.currentPageOffsetStart }} a
-            {{ adminUsers.currentPageOffsetEnd }} de
-            {{ adminUsers.nbResults }} registros
+            Exibindo {{ customers.currentPageOffsetStart }} a
+            {{ customers.currentPageOffsetEnd }} de
+            {{ customers.nbResults }} registros
         {% endblock %}
 
         {% block list_pagination %}
-            {{ pagerfanta(adminUsers, 'twitter_bootstrap3',{
-                routeName: 'admin_user_index',
+            {{ pagerfanta(customers, 'twitter_bootstrap3',{
+                routeName: 'admin_customer_index',
                 routeParams: app.request.query.all
             }) }}
         {% endblock %}
