--- a/app/Resources/views/admin/customer/index.html.twig
+++ b/app/Resources/views/admin/customer/index.html.twig
@@ -74,7 +74,7 @@
                         {% endif %}
                     </td>
                     <td>{% if customer.siteUser.lastLoginAt is not null %}
-                        {{ customer.siteUser.lastLoginAt|date('d/m/Y H:i') }}
+                            {{ customer.siteUser.lastLoginAt|date('d/m/Y H:i') }}
                         {% else %}
                             -
                         {% endif %}</td>
@@ -93,7 +93,7 @@
                             {% endblock %}
                             {% block li_actions %}
                                 <li>
-                                    <a href="#">
+                                    <a href="{{ path('admin_customer_change_password', {id: customer.siteUser.id}) }}">
                                         <i class="fa fa-user"></i>
                                         Alterar Senha
                                     </a>
