--- a/app/Resources/views/admin/customer/index.html.twig
+++ b/app/Resources/views/admin/customer/index.html.twig
@@ -52,7 +52,7 @@
                         Criado em
                     </a>
                 </th>
-                <th width="10%">Ações</th>
+                <th>Ações</th>
             </tr>
         {% endblock %}
 
