fix default customer new enabled yes

--- a/app/Resources/views/admin/customer/new.html.twig
+++ b/app/Resources/views/admin/customer/new.html.twig
@@ -41,7 +41,8 @@
                             'data-on-color': 'success',
                             'data-off-color': 'danger',
                             'data-on-text': 'resource.is_enabled'|trans,
-                            'data-off-text': 'resource.is_not_enabled'|trans
+                            'data-off-text': 'resource.is_not_enabled'|trans,
+                            'checked': true
                         }}) }}
                     </div>
                 </div>
