--- a/app/Resources/views/site/experimente/index.html.twig
+++ b/app/Resources/views/site/experimente/index.html.twig
@@ -1,5 +1,12 @@
 {% extends 'site/base.html.twig' %}
 
-{% block body %}
-    <h3>Experimente</h3>
+{% block main_container %}
+    <div class="row">
+        <div id="content" class="12u">
+            <header>
+                <h2>Experimente</h2>
+            </header>
+        </div>
+    </div>
+    <h3></h3>
 {% endblock %}
