--- a/app/Resources/views/site/produtos/index.html.twig
+++ b/app/Resources/views/site/produtos/index.html.twig
@@ -1,5 +1,11 @@
 {% extends 'site/base.html.twig' %}
 
-{% block body %}
-    <h3>Produtos</h3>
+{% block main_container %}
+
+    <div id="content" class="12u">
+        <header>
+            <h2>Produtos</h2>
+        </header>
+    </div>
+
 {% endblock %}
