--- a/app/Resources/views/site/contato/index.html.twig
+++ b/app/Resources/views/site/contato/index.html.twig
@@ -1,5 +1,11 @@
 {% extends 'site/base.html.twig' %}
 
-{% block body %}
-    <h3>Contato</h3>
+{% block main_container %}
+    <div class="row">
+        <div id="content" class="12u">
+            <header>
+                <h2>Contato</h2>
+            </header>
+        </div>
+    </div>
 {% endblock %}
