configurando web_link preload

--- a/app/Resources/views/site/_partials/_block_javascripts.html.twig
+++ b/app/Resources/views/site/_partials/_block_javascripts.html.twig
@@ -1,8 +1,8 @@
-<script src="{{ preload(asset('site/assets/js/jquery.min.js')) }}"></script>
-<script src="{{ preload(asset('site/assets/js/jquery.dropotron.min.js')) }}"></script>
-<script src="{{ preload(asset('site/assets/js/jquery.slidertron.min.js')) }}"></script>
-<script src="{{ preload(asset('site/assets/js/skel.min.js')) }}"></script>
-<script src="{{ preload(asset('site/assets/js/skel-viewport.min.js')) }}"></script>
-<script src="{{ preload(asset('site/assets/js/util.js')) }}"></script>
-<!--[if lte IE 8]><script src="{{ preload(asset('site/assets/js/ie/respond.min.js')) }}"></script><![endif]-->
-<script src="{{ preload(asset('site/assets/js/main.js')) }}"></script>
+<script src="{{ preload(asset('site/assets/js/jquery.min.js'), { as: 'script' }) }}"></script>
+<script src="{{ preload(asset('site/assets/js/jquery.dropotron.min.js'), { as: 'script' }) }}"></script>
+<script src="{{ preload(asset('site/assets/js/jquery.slidertron.min.js'), { as: 'script' }) }}"></script>
+<script src="{{ preload(asset('site/assets/js/skel.min.js'), { as: 'script' }) }}"></script>
+<script src="{{ preload(asset('site/assets/js/skel-viewport.min.js'), { as: 'script' }) }}"></script>
+<script src="{{ preload(asset('site/assets/js/util.js'), { as: 'script' }) }}"></script>
+<!--[if lte IE 8]><script src="{{ asset('site/assets/js/ie/respond.min.js') }}"></script><![endif]-->
+<script src="{{ preload(asset('site/assets/js/main.js'), { as: 'script' }) }}"></script>
