--- a/app/Resources/views/site/_partials/_block_stylesheets.html.twig
+++ b/app/Resources/views/site/_partials/_block_stylesheets.html.twig
@@ -1,2 +1,2 @@
-<link rel="stylesheet" href="{{ preload(asset('site/assets/css/main.css')) }}">
-<!--[if lte IE 8]><link rel="stylesheet" href="{{ preload(asset('site/assets/css/ie8.css')) }}" /><![endif]-->
+<link rel="stylesheet" href="{{ preload(asset('site/assets/css/main.css'), { as: 'style' }) }}">
+<!--[if lte IE 8]><link rel="stylesheet" href="{{ asset('site/assets/css/ie8.css') }}" /><![endif]-->
