--- a/app/Resources/views/admin/_partials/_navbar.html.twig
+++ b/app/Resources/views/admin/_partials/_navbar.html.twig
@@ -41,7 +41,7 @@
                                         <i class="icon-key"></i>Alterar Senha</a>
                                 </li>
                                 <li>
-                                    <a href="{{ path('admin_logout') }}">
+                                    <a href="{{ logout_path() }}">
                                         <i class="icon-power"></i> Sair </a>
                                 </li>
                             </ul>
