texto home banner

--- a/app/Resources/views/site/_partials/_banner.html.twig
+++ b/app/Resources/views/site/_partials/_banner.html.twig
@@ -22,8 +22,8 @@
     </div>
 
     <header>
-        <h2>Mucerat Leonros Cito Suere Nuctuset Ultrices Cosuere Aubilia Curae</h2>
-        <span>Lorem donec augue dui iaculis vitae metus vel adipiscing porta magna</span>
+        <h2>TENHA CONTROLE TOTAL SOBRE SUA EMPRESA</h2>
+        <span>SISTEMA DE GESTÃO EMPRESARIAL PARA QUEM NÃO TEM TEMPO A PERDER</span>
     </header>
 
 </div>
