--- a/app/Resources/views/admin/_form/_fields.html.twig
+++ b/app/Resources/views/admin/_form/_fields.html.twig
@@ -15,3 +15,12 @@
         {{ block('form_errors') }}
     </div>
 {% endblock switch_widget %}
+
+{% block date_time_picker_widget %}
+    <div class="input-group date">
+        {{ block('datetime_widget') }}
+        <span class="input-group-addon">
+            <span class="fa fa-calendar" aria-hidden="true"></span>
+        </span>
+    </div>
+{% endblock %}
