--- a/app/Resources/views/admin/_partials/_sidebar.html.twig
+++ b/app/Resources/views/admin/_partials/_sidebar.html.twig
@@ -85,8 +85,16 @@
             <li class="nav-item">
                 <a href="#" class="nav-link">
                     <i class="icon-layers"></i>
-                    <span class="title">Páginas</span>
+                    <span class="title">CMS</span>
                 </a>
+                <ul class="sub-menu">
+                    <li class="nav-item ">
+                        <a href="{{ path('banner_index') }}" class="nav-link ">
+                            <i class="icon-picture"></i>
+                            <span class="title">{{ 'admin.banner.title'|trans }}</span>
+                        </a>
+                    </li>
+                </ul>
             </li>
         </ul>
         <!-- END SIDEBAR MENU -->
