--- a/app/Resources/views/admin/banner/edit.html.twig
+++ b/app/Resources/views/admin/banner/edit.html.twig
@@ -45,7 +45,7 @@
                     <div class="col-md-12">
                         <hr>
                     </div>
-                    <div class="col-md-12">{{ form_row(form.image_file) }}</div>
+                    <div class="col-md-12">{{ form_row(form.imageFile, {'required': false}) }}</div>
                     <div class="col-md-12">
                         <hr>
                     </div>
