--- a/app/Resources/views/admin/banner/new.html.twig
+++ b/app/Resources/views/admin/banner/new.html.twig
@@ -39,7 +39,7 @@
         {% block tab_pane %}
             <div role="tabpanel" class="tab-pane active" id="geral">
                 <div class="row">
-                    <div class="col-md-12">{{ form_row(form.image_file) }}</div>
+                    <div class="col-md-12">{{ form_row(form.imageFile) }}</div>
                     <div class="col-md-12">
                         <hr>
                     </div>
