--- a/app/Resources/views/admin/base.html.twig
+++ b/app/Resources/views/admin/base.html.twig
@@ -16,7 +16,7 @@
 </head>
 
 {% block body %}
-    <body class="page-sidebar-closed-hide-logo page-container-bg-solid page-header-fixed _page-sidebar-fixed {% block body_class %}{% endblock %}">
+    <body class="page-sidebar-closed-hide-logo page-container-bg-solid page-header-fixed _page-sidebar-fixed">
 
     {% include('admin/_partials/_navbar.html.twig') %}
 
