--- a/app/Resources/views/site/_partials/_header.html.twig
+++ b/app/Resources/views/site/_partials/_header.html.twig
@@ -1,4 +1,4 @@
-<header id="header" class="sticky">
+<header id="header">
     <div id="trueHeader">
         <div class="wrapper">
             <div class="logoarea">
